<!--
  ~     <HabitRabbit- A habit tracking app.>
  ~     Copyright (C) <2017>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Habit Rabbit</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="main">MAIN</string>
    <string name="done">DONE</string>
    <string name="name">NAME</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="save">save</string>

    <string name="nameHint">Name</string>
    <string name="reasonHint">Reason</string>

    <string name="enter_valid_username">Please enter a valid username</string>
    <string name="too_long_username">Please enter a username of no more than 20 characters</string>

    <string name="daySelectPrompt">Please select days this habit is due:</string>
    <string name="startDate">Start Date (DD-MM-YYYY)</string>
    <string name="addHabit">Add</string>
    <string name="goToHistory">History</string>
    <string name="percentComplete">Your percentage completion:</string>
    <string name="timesFailed">Times failed to complete:</string>
    <string name="timesCompleted">Times completed:</string>
    <string name="title_activity_event_maps">Map</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="description">description</string>
    <string name="progress">progress</string>
    <string name="highlight">Highlight</string>
    <string name="enter_location">Enter Location</string>
    <string name="image">image</string>
    <string name="calnedar_button_descript">A Calendar</string>
    <string name="map">Map</string>
    <string name="button3">Button3</string>
    <string name="app_subtitle">A simple habit tracking app</string>
    <string name="login">Login</string>
    <string name="friends">Friends</string>
    <string name="username">Username</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="signup_date">signup date</string>
    <string name="colorblindmode">ColorBlindMode</string>
    <string name="type">Type:</string>
    <string name="event_details">Event Details</string>
    <string name="comment_header">Comment:</string>
    <string name="date_header">Date:</string>
    <string name="location_header">Location:</string>
    <string name="a_plus">A plus</string>
    <string name="type_header">TYPE:</string>
    <string name="date">date</string>
    <string name="add_event">ADD EVENT</string>
    <string name="Date" />
    <string name="filter">Filter</string>
    <string name="filter_by_type">Filter by type</string>
    <string name="filter_by_comment">Filter by comment</string>
    <string name="search">search</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>
    <string name="friend_username">friend username</string>
    <string name="accept">Accept</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="add_a_friend">Add a Friend</string>


</resources>
